Update to JSAV 0.7.0-67; polish aspects of linear structures chapter

--- a/Exercises/Binary/HeapSumm.html
+++ b/Exercises/Binary/HeapSumm.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="exercise" data-name="BSTdMCQ"></div>
+  <div class="exercise" data-name="BSTbinTF"></div>
   <div class="exercise" data-name="HfeatureMCQ"></div>
   <div class="exercise" data-name="HgreatestMCQ"></div>
   <div class="exercise" data-name="HleastMCQ"></div>
