--- a/Exercises/List/listLinkedDeletion.html
+++ b/Exercises/List/listLinkedDeletion.html
@@ -496,6 +496,9 @@ Written by Junyang Chen and Cliff Shaffer
         <p>To move an element, click on it (to highlight it), then
           click on the element position in the node where you want it to
           go.
+          To set the "return" value, click on the element position in the  
+          node you want to return (to highlight it), then click on the
+          return value box to set it to the highlighted value.
           You can make a node's "next" pointer point to "null" by
           first clicking the pointer for the node and then
           clicking the "makenull" button.
