Various maintainance and small fixes in content

--- a/Exercises/AlgAnal/AlgAnlsFIBsmlintgr.html
+++ b/Exercises/AlgAnal/AlgAnlsFIBsmlintgr.html
@@ -12,10 +12,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> What is the smallest integer <code>k</code> such
-	that <code> \sqrt n = O(n^k) </code>? </p>
+	that <code>\sqrt n</code> is in  <code>O(n^k)</code>? </p>
       <p class="solution" data-type="text"><var>1</var></p>
       <div class="hints">
 	<p><code>\sqrt n = n^{0.5}</code></p>
+	<p>What is the smallest integer greater than 0.5?</p>
       </div> 
     </div>
   </div>
