--- a/Exercises/AlgAnal/AlgAnlsFIBsmlintgr2.html
+++ b/Exercises/AlgAnal/AlgAnlsFIBsmlintgr2.html
@@ -12,10 +12,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> What is the smallest integer <code>k</code>
-	such that <code>n \log n = O(n^k) </code>? </p>
+	such that <code>n \log n</code> is in <code>O(n^k)</code>? </p>
       <p class="solution" data-type="text"><var>2</var></p>
       <div class="hints">
-      </div> 
+	<p><code>n \log n</code> is bigger than <code>n^1</code></p>
+      </div>
     </div>
   </div>
 </div>
