--- a/Exercises/AlgAnal/AlgAnalSumm.html
+++ b/Exercises/AlgAnal/AlgAnalSumm.html
@@ -12,6 +12,9 @@
   <div class="exercise" data-name="AlgAnlsFIBsmlintgr2"></div>
   <div class="exercise" data-name="AlgAnlsFIBsqrt"></div>
   <div class="exercise" data-name="AlgAnlsMCQalgdfn"></div>
+  <div class="exercise" data-name="AlgAnlsMCQbest1"></div>
+  <div class="exercise" data-name="AlgAnlsMCQbest2"></div>
+  <div class="exercise" data-name="AlgAnlsMCQbest3"></div>
   <div class="exercise" data-name="AlgAnlsMCQrelalgprb"></div>
   <div class="exercise" data-name="AlgAnlsMCQsqlsrch"></div>
   <div class="exercise" data-name="AlgAnlsTFbgthta"></div>
