--- a/Exercises/AlgAnal/AlgAnlsTFsqlsrch1.html
+++ b/Exercises/AlgAnal/AlgAnlsTFsqlsrch1.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">The Sequential Search algorithm
-	is <code>O(n^2)</code>.</p>
+        is in <code>O(n^2)</code>.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
@@ -21,7 +21,7 @@
       </ul>
       <div class="hints">
 	<p>Recall that <code>O(n^2)</code> means that the program has no inputs
-	  that cost more than this.</p>
+          that cost more than this.</p>
         <p>A proposed upper bound can be much higher than the actual
           cost of the program, and still be correct.</p>
       </div>
