--- a/Exercises/Binary/DprobsAll.html
+++ b/Exercises/Binary/DprobsAll.html
@@ -73,7 +73,7 @@ var initJSAV = function () {
     <p class="problem">
       <div id="jsav"></div>
     </p>
-    <p class="question">How many nodes in the tree have at least one sibling?</p>
+    <p class="question">How many nodes in the tree have a sibling?</p>
     <p class="solution" data-type="text"><var>ANS</var></p>
   </div>
 
@@ -140,55 +140,55 @@ tree have?</p>
     </div>
   </div>
 
-    <div id="problem-type-or-description">
-      <p class="question">Which statement is false?</p>
-      <div class="solution"><var>"Every binary tree has at least one node"</var></div>
-      <ul class="choices" data-show="5" data-none="true">
-	<li><var>"Every non-empty binary tree has exactly one root node"</var></li>
-	<li><var>"Every node in a binary tree has exactly two children"</var></li>
-	<li><var>"Every non-root node in a binary tree has exactly one parent"</var></li>
-      </ul>
-      <div class="hints">
-	<p>Look carefully at the definition for a binary tree.</p>
-	<p>It states that every binary tree is either empty, or it has
-	  a root node and two binary trees as children.
-	</p>
-	<p>So, every binary tree node has two children, but not every
-	  binary tree has a node.
-	</p>
-      </div>
-    </div> 
-
-    <div id="problem-type-or-description">
-      <p class="question">What is the minimum number of nodes in a
-	complete binary tree with height 4?
+  <div id="problem-type-or-description">
+    <p class="question">Which statement is false?</p>
+    <div class="solution"><var>"Every binary tree has at least one node"</var></div>
+    <ul class="choices" data-show="5" data-none="true">
+      <li><var>"Every non-empty binary tree has exactly one root node"</var></li>
+      <li><var>"Every node in a binary tree has exactly two children"</var></li>
+      <li><var>"Every non-root node in a binary tree has exactly one parent"</var></li>
+    </ul>
+    <div class="hints">
+      <p>Look carefully at the definition for a binary tree.</p>
+      <p>It states that every binary tree is either empty, or it has
+	a root node and two binary trees as children.
       </p>
-      <div class="solution" data-type="text"><var>8</var></div>
-    </div> 
+      <p>So, every binary tree node has two children, but not every
+	binary tree has a node.
+      </p>
+    </div>
+  </div> 
 
-    <div id="problem-type-or-description">
-      <p class="question">Select the one true statement.</p>
-      <div class="solution"><var>"None of the above"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"Every binary tree is either complete or full"</var></li>
-	<li><var>"Every complete binary tree is also a full binary tree"</var></li>
-	<li><var>"Every full binary tree is also a complete binary tree"</var></li>
-	<li><var>"No binary tree is both complete and full"</var></li>
-        <li><var>"None of the above"</var></li>
-      </ul>
-    </div> 
+  <div id="problem-type-or-description">
+    <p class="question">What is the minimum number of nodes in a
+      complete binary tree with height 4?
+    </p>
+    <div class="solution" data-type="text"><var>8</var></div>
+  </div> 
 
-    <div id="problem-type-or-description">
-      <p class="question">What is the minimum number of nodes in a
+  <div id="problem-type-or-description">
+    <p class="question">Select the one true statement.</p>
+    <div class="solution"><var>"None of the above"</var></div>
+    <ul class="choices" data-category="true">
+      <li><var>"Every binary tree is either complete or full"</var></li>
+      <li><var>"Every complete binary tree is also a full binary tree"</var></li>
+      <li><var>"Every full binary tree is also a complete binary tree"</var></li>
+      <li><var>"No binary tree is both complete and full"</var></li>
+      <li><var>"None of the above"</var></li>
+    </ul>
+  </div> 
+
+  <div id="problem-type-or-description">
+    <p class="question">What is the minimum number of nodes in a
       full binary tree with height 4?</p>
-      <div class="solution" data-type="text"><var>7</var></div>
-    </div> 
+    <div class="solution" data-type="text"><var>7</var></div>
+  </div> 
 
-    <div id="problem-type-or-description">
-      <p class="question">Suppose T is a binary tree with 14
+  <div id="problem-type-or-description">
+    <p class="question">Suppose T is a binary tree with 14
       nodes. What is the minimum possible height of T?</p>
-      <div class="solution" data-type="text"><var>4</var></div>
-    </div> 
+    <div class="solution" data-type="text"><var>4</var></div>
+  </div> 
 
     <div id="problem-type-or-description">
       <p class="question">What is the minimum number of internal nodes
@@ -207,30 +207,6 @@ tree have?</p>
 	<li><var><code>\Theta(n^2)</code> time</var></li>
       </ul>
     </div> 
-
-    <div id="problem-type-or-description">
-      <p class="question">Why does function preorder2() presented in
-	the Traversal module make only half as many recursive calls
-	as function preorder()?</p>
-      <div class="solution"><var>"Because half of the pointers are null"</var></div>
-      <ul class="choices">
-	<li><var>"Because there are half as many nodes"</var></li>
-	<li><var>"Because there are half as many leaf nodes"</var></li>
-	<li><var>"Because only internal nodes get called"</var></li>
-      </ul>
-    </div> 
-
-    <div id="problem-type-or-description">
-      <p class="question">Visiting each element in a tree is known as:</p>
-      <div class="solution"><var>"Traversing"</var></div>
-      <ul class="choices">
-	<li><var>"Sorting"</var></li>
-	<li><var>"Merging"</var></li>
-	<li><var>"Inserting"</var></li>
-	<li><var>"Enumerating"</var></li>
-      </ul>
-    </div> 
-
 </div>
 </div>
 </body>
