Lots of small changes to content to fix reported bugs

--- a/AV/Development/BST-search-proficiency.html
+++ b/AV/Development/BST-search-proficiency.html
@@ -36,7 +36,7 @@
     <form class="avcontainer">
       <p class="instructLabel">Instructions:</p>
       <p class="instructions">
-        Use the BST Search algorith to find the key given in the
+        Use the BST Search algorithm to find the key given in the
         excercise. Click on a node to reveal the value and its
         children.
       </p>
