--- a/Exercises/Binary/BSTdMCQ.html
+++ b/Exercises/Binary/BSTdMCQ.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question">BST search/insert/delete operations
       typically run in time O(d). What is d?</p>
-      <div class="solution"><var>"The depth of the tree"</var></div>
+      <div class="solution"><var>"The depth of the appropriate node in the tree"</var></div>
       <ul class="choices">
 	<li><var>"The number of divisions at each level"</var></li>
 	<li><var>"The number of entries in each node"</var></li>
