--- a/Exercises/Hashing/HashAnalSumm.html
+++ b/Exercises/Hashing/HashAnalSumm.html
@@ -15,5 +15,6 @@
   <div class="exercise" data-name="HashMCQavg"></div>
   <div class="exercise" data-name="HashMCQclosed"></div>
   <div class="exercise" data-name="HashMCQquery"></div>
+  <div class="exercise" data-name="HashFuncTFdisk"></div>
 </body>
 </html>
