--- a/Exercises/Hashing/HashingBucket2PRO.html
+++ b/Exercises/Hashing/HashingBucket2PRO.html
@@ -30,7 +30,8 @@
     }
 
     .jsavarray .jsavindex {
-      min-height: 30px;
+      min-height: 30px !important;
+      max-height: 30px !important;
       min-width: 30px;
       line-height: 30px;
     }
