--- a/Exercises/Sorting/HeapsortPRO.html
+++ b/Exercises/Sorting/HeapsortPRO.html
@@ -144,7 +144,8 @@ var checkAnswer = function (arr_size) {
 	</div>
       </div>
       <div class="hints">
-	<p> Select the maximum element and restore the heap</p>
+	<p> Select the maximum element and move it to the correct
+	location. Then restore the heap order.</p>
       </div>
     </div>
   </div>
