--- a/Exercises/Sorting/MergesortPRO.html
+++ b/Exercises/Sorting/MergesortPRO.html
@@ -164,7 +164,10 @@ function checkAnswer(arr_size) {
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <div class="question">
-	<p>Merge the two sublists below into the larger array</p>
+	<p>Merge the two subarrays below into the larger array. To
+        move a value in a subarray, click on it (it will then be
+        highlighted in yellow), and then click on the proper position
+        in the array above.</p>
         <input id="reset" type="button" value="Reset" />
 	<div id="jsav" class="jsavcanvas"></div>
       </div>
