--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -31,8 +31,9 @@
         For each increment, you will need to process each
         sublist in turn. For each sublist, click on its entries in the
         Input array to highlight them. Once you have the sublist
-        selected, click "Done Selecting". Next, drag and drop the items
-        to sort them. Then click "Done Sorting Sublist" to go on to the next
+        selected, click "Done Selecting". Next, sort the selected
+        items by clicking on them to swap pairs of items.
+        Then click "Done Sorting Sublist" to go on to the next
         sublist. When you have processed all of the sublists for a given
         increment, click "Done Increment". Click on "Help" for more details.
       </p>
