--- a/Exercises/Hashing/HashingBucketPRO.html
+++ b/Exercises/Hashing/HashingBucketPRO.html
@@ -25,7 +25,8 @@
     .jsavarray { position: absolute; }
 
     .jsavarray .jsavindex {
-      min-height: 30px;
+      min-height: 30px !important;
+      max-height: 30px !important;
       min-width: 30px;
       line-height: 30px;
     }
