--- a/AV/Sorting/shellsortPRO.html
+++ b/AV/Sorting/shellsortPRO.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="ShellsortProficiency.css" type="text/css" />
+  <link rel="stylesheet" href="shellsortPRO.css" type="text/css" />
 </head>
 
 <body>
@@ -68,6 +68,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="ShellsortProficiency.js"></script>
+<script src="shellsortPRO.js"></script>
 </body>
 </html>
