Update shellsort and heapsort files

--- a/AV/Sorting/shellsortPerf.html
+++ b/AV/Sorting/shellsortPerf.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="ShellsortPerformance.css" type="text/css" />
+  <link rel="stylesheet" href="shellsortPerf.css" type="text/css" />
 </head>
 
 <body>
@@ -58,6 +58,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="ShellsortPerformance.js"></script>
+<script src="shellsortPerf.js"></script>
 </body>
 </html>
