--- a/AV/Sorting/heapsortPRO.html
+++ b/AV/Sorting/heapsortPRO.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="heapsortProficiency.css" />
+    <link rel="stylesheet" href="heapsortPRO.css" />
   </head>
   <body>
     <div id="container">
@@ -50,6 +50,6 @@
     <script src="../../JSAV/extras/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
-    <script src="heapsortProficiency.js"></script>
+    <script src="heapsortPRO.js"></script>
   </body>
 </html>
