--- a/AV/Sorting/mergesortPRO.html
+++ b/AV/Sorting/mergesortPRO.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="mergesortProficiency.css" type="text/css" />
+  <link rel="stylesheet" href="mergesortPRO.css" type="text/css" />
 </head>
 
 <body>  
@@ -50,6 +50,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="mergesortProficiency.js"></script>
+<script src="mergesortPRO.js"></script>
 </body>
 </html>
