--- a/AV/Sorting/quicksortPRO.html
+++ b/AV/Sorting/quicksortPRO.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="quicksortProficiency.css" type="text/css" />
+  <link rel="stylesheet" href="quicksortPRO.css" type="text/css" />
 </head>
 
 <body>
@@ -69,6 +69,6 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="quicksortCODE.js"></script>
-<script src="quicksortProficiency.js"></script>
+<script src="quicksortPRO.js"></script>
 </body>
 </html>
