--- a/AV/Development/BuildHeapVisualProof.html
+++ b/AV/Development/BuildHeapVisualProof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Graphical Primitives Testing</title>
+  <title>Build Heap Running Time Proof</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -13,7 +13,7 @@
   <table class="headerTable">
     <tr>
       <td class="headerCenter">
-        <h1>The Build Heap Running Time Visual Proof</h1>
+        <h1>Build Heap Running Time Proof</h1>
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
