Fixed typo in BST-search-proficiency instructions

--- a/AV/Development/BST-search-proficiency.html
+++ b/AV/Development/BST-search-proficiency.html
@@ -37,7 +37,7 @@
       <p class="instructLabel">Instructions:</p>
       <p class="instructions">
         Use the BST Search algorithm to find the key given in the
-        excercise. Click on a node to reveal the value and its
+        exercise. Click on a node to reveal the value and its
         children.
       </p>
       <p align="center">
