Deleted AVL-extension from AV/Development. Exercises now use the AVLextension in JSAV/extras.

--- a/AV/Development/AVL-insert.html
+++ b/AV/Development/AVL-insert.html
@@ -41,7 +41,7 @@
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="ClickHandler.js"></script>
-        <script src="AVL-extension.js"></script>
+        <script src="../../JSAV/extras/AVLextension.js"></script>
         <script src="stack.js"></script>
 
         <script>
