--- a/AV/Development/rotation-proficiency.html
+++ b/AV/Development/rotation-proficiency.html
@@ -30,7 +30,7 @@
         <script src="../../JSAV/lib/jquery.transit.js"></script>
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="AVL-extension.js"></script>
+        <script src="../../JSAV/extras/AVLextension.js"></script>
 
         <script>
 
