--- a/AV/Development/red-black-tree-coloring.html
+++ b/AV/Development/red-black-tree-coloring.html
@@ -31,7 +31,7 @@
         <script src="../../JSAV/lib/jquery.transit.js"></script>
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="AVL-extension.js"></script>
+        <script src="../../JSAV/extras/AVLextension.js"></script>
         <script src="Red-black-tree.js"></script>
 
         <script>
