--- a/AV/Development/red-black-tree-proficiency.html
+++ b/AV/Development/red-black-tree-proficiency.html
@@ -42,7 +42,7 @@
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="ClickHandler.js"></script>
-        <script src="AVL-extension.js"></script>
+        <script src="../../JSAV/extras/AVLextension.js"></script>
         <script src="Red-black-tree.js"></script>
         <script src="stack.js"></script>
 
