Deleted Red-black-tree extension from AV/Development. Exercises now use the redblacktree.js in JSAV/extras.

--- a/AV/Development/red-black-tree-coloring.html
+++ b/AV/Development/red-black-tree-coloring.html
@@ -32,7 +32,7 @@
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="../../JSAV/extras/AVLextension.js"></script>
-        <script src="Red-black-tree.js"></script>
+        <script src="../../JSAV/extras/redblacktree.js"></script>
 
         <script>
 
