--- a/AV/Development/red-black-tree-proficiency.html
+++ b/AV/Development/red-black-tree-proficiency.html
@@ -43,7 +43,7 @@
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="ClickHandler.js"></script>
         <script src="../../JSAV/extras/AVLextension.js"></script>
-        <script src="Red-black-tree.js"></script>
+        <script src="../../JSAV/extras/redblacktree.js"></script>
         <script src="stack.js"></script>
 
         <script>
