Deleted stack extension from AV/Development. Exercises now use the stack.js in JSAV/extras.

--- a/AV/Development/AVL-insert.html
+++ b/AV/Development/AVL-insert.html
@@ -42,7 +42,7 @@
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="ClickHandler.js"></script>
         <script src="../../JSAV/extras/AVLextension.js"></script>
-        <script src="stack.js"></script>
+        <script src="../../JSAV/extras/stack.js"></script>
 
         <script>
 
