--- a/AV/Development/red-black-tree-proficiency.html
+++ b/AV/Development/red-black-tree-proficiency.html
@@ -44,7 +44,7 @@
         <script src="ClickHandler.js"></script>
         <script src="../../JSAV/extras/AVLextension.js"></script>
         <script src="../../JSAV/extras/redblacktree.js"></script>
-        <script src="stack.js"></script>
+        <script src="../../JSAV/extras/stack.js"></script>
 
         <script>
 
