--- a/AV/Development/BST-delete-proficiency.html
+++ b/AV/Development/BST-delete-proficiency.html
@@ -59,7 +59,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV.js"></script>
-  <script src="stack.js"></script>
+  <script src="../../JSAV/extras/stack.js"></script>
   <script src="BSTCODE.js"></script>
   <script src="BST-delete-proficiency.js"></script>
 </body>
