--- a/AV/Development/BST-insert-proficiency.html
+++ b/AV/Development/BST-insert-proficiency.html
@@ -54,7 +54,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV.js"></script>
-  <script src="stack.js"></script>
+  <script src="../../JSAV/extras/stack.js"></script>
   <script src="BSTCODE.js"></script>
   <script src="BST-insert-proficiency.js"></script>
 </body>
