--- a/AV/Development/binheapInsertPRO.html
+++ b/AV/Development/binheapInsertPRO.html
@@ -51,7 +51,7 @@
     <script src="../../JSAV/extras/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
-    <script src="stack.js"></script>
+    <script src="../../JSAV/extras/stack.js"></script>
     <script src="binheapInsertPRO.js"></script>
   </body>
 </html>
