--- a/AV/Development/digitalSearchTree.html
+++ b/AV/Development/digitalSearchTree.html
@@ -33,7 +33,7 @@
         <script src="../../JSAV/lib/jquery.transit.js"></script>
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="stack.js"></script>
+        <script src="../../JSAV/extras/stack.js"></script>
 
         <script>
 
