--- a/AV/Development/radixTrie.html
+++ b/AV/Development/radixTrie.html
@@ -34,7 +34,7 @@
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
         <script src="ClickHandler.js"></script>
-        <script src="stack.js"></script>
+        <script src="../../JSAV/extras/stack.js"></script>
 
         <script>
 
