--- a/AV/Development/stackTest.html
+++ b/AV/Development/stackTest.html
@@ -36,7 +36,7 @@
         <script src="../../JSAV/lib/jquery.transit.js"></script>
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="stack.js"></script>
+        <script src="../../JSAV/extras/stack.js"></script>
 
         <script>
 
