--- a/AV/Development/insertionSortPRO.html
+++ b/AV/Development/insertionSortPRO.html
@@ -45,7 +45,7 @@
             av = new JSAV($("#jsavcontainer")),
             code = av.code(
                 "public static void insertionSort(int[] table) {\n"+
-                "   for (int i = 0; i < table.length; i++) {\n"+
+                "   for (int i = 1; i < table.length; i++) {\n"+
                 "       int j = i;\n"+
                 "       while (j > 0 && table[j - 1] > table[j]) {\n"+
                 "           swap(table, j - 1, j);\n"+
@@ -85,7 +85,7 @@
             for (var i = 1; i < arraySize; i++) {
                 var j = i;
                 while (j > 0 && modelArray.value(j-1) > modelArray.value(j)) {
-                    jsav.umsg('Shift "'+modelArray.value(j)+'" to the left.')
+                    jsav.umsg('Shift "'+modelArray.value(j)+'" to the left.<br/>&nbsp;&nbsp;i: ' + i + '<br/>&nbsp;&nbsp;j: ' + j)
                     modelArray.swap(j, j-1);
                     jsav.stepOption("grade", true);
                     jsav.step();
