Polish exercise widths

--- a/Exercises/Sorting/ShellsortFindsub.html
+++ b/Exercises/Sorting/ShellsortFindsub.html
@@ -80,7 +80,7 @@ var checkAnswer = function (start_pos, inc_size) {
         <p>Highlight all records contained in the sublist with
           increment <var>inc_size</var> starting at
           index <var>start_pos</var></p>
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
