--- a/Exercises/Sorting/MergesortMergePRO.html
+++ b/Exercises/Sorting/MergesortMergePRO.html
@@ -17,17 +17,13 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <style>
     #container {
       border: 0;
-      width: 780px;
-      height: 640px;
-      padding: 10px;
-      overflow: hidden;
     }
 
     .jsavarray {
       position: absolute;
     }
 
-    #container .jsavarray {
+    .jsavarray {
       left: -10px;
       height: 80px;
     }
