--- a/Exercises/Sorting/ShellsortSublist.html
+++ b/Exercises/Sorting/ShellsortSublist.html
@@ -1,4 +1,4 @@
-<!-- Shellsort Sublist Summary -->
+<!-- Shellsort Sublist Exercises -->
 
 <!DOCTYPE html>
 <html data-require="math">
@@ -15,7 +15,7 @@
 
   <style>
     .jsavcontainer {
-      border: 0px;
+      border: 0;
     }
   </style>
 </head>
