--- a/Exercises/Sorting/BubsortPRO.html
+++ b/Exercises/Sorting/BubsortPRO.html
@@ -124,7 +124,7 @@ var checkAnswer = function (arr_size) {
            Simply click on entries in the array to swap them in the way
            that Bubble Sort would during its first pass.</p>
         <input id="reset" type="button" value="Reset" />	
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
