--- a/Exercises/Sorting/FindInversionsPRO.html
+++ b/Exercises/Sorting/FindInversionsPRO.html
@@ -63,7 +63,7 @@ var genAnswer = function () {
     <div>
       <div class="question">
 	How many inversions are in the following array?
-	<div id="jsav"></div>
+	<div id="jsav" class="jsavcanvas"></div>
       </div>
       <p class="solution" data-type="text"><var>CorrectAnswer</var></p>
       <div class="hints"> 
