--- a/Exercises/Sorting/SelsortPRO.html
+++ b/Exercises/Sorting/SelsortPRO.html
@@ -141,7 +141,7 @@ var checkAnswer = function (arr_size) {
         <p>Perform the next iteration of Selection Sort, to put the
            proper array element into the highlighted position.</p>
         <input id="reset" type="button" value="Reset" />	
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
