--- a/Exercises/Sorting/ShellsortMCQskip.html
+++ b/Exercises/Sorting/ShellsortMCQskip.html
@@ -34,8 +34,8 @@
 	<p>Recall that array indexing starts at 0, so the records are
 	in positions 0 to 8.</p>
 	<p>0 is paired with 5, 1 with 6, and so on.</p>
-	<p>This means that records 4 would have been paired with 9 if
-	there had been a 9.</p>
+	<p>This means that the record in position 4 would have been
+	  paired with position 9 if there had been a position 9.</p>
       </div>
     </div>
   </div>
