Polishing sorting exercises

--- a/Exercises/Sorting/HeapsortStepPRO.html
+++ b/Exercises/Sorting/HeapsortStepPRO.html
@@ -130,7 +130,7 @@ var checkAnswer = function (arr_size) {
           <input id="reset" type="button" value="Reset" />	
 	  <input id="decrement" type="button" value="Decrement heap size" />
 	</p>
-	<div id="jsav"></div>
+	<div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
 	<div class="guess">
