--- a/Exercises/Sorting/InssortPRO.html
+++ b/Exercises/Sorting/InssortPRO.html
@@ -136,7 +136,7 @@ var checkAnswer = function (arr_size) {
         <p> Perform the next part of Insertion Sort to move the
             highlighted record to its proper place in the array.</p>
         <input id="reset" type="button" value="Reset" />	
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
