--- a/Exercises/Sorting/QuicksortPartitPRO.html
+++ b/Exercises/Sorting/QuicksortPartitPRO.html
@@ -121,7 +121,7 @@ var checkAnswer = function (length) {
       <div class="question">
         <p>The pivot element for quicksort is highlighted in the array below. Partition the array using quicksort.</p>
         <input id="reset" type="button" value="Reset" />
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
