--- a/Exercises/Sorting/QuicksortPivotPRO.html
+++ b/Exercises/Sorting/QuicksortPivotPRO.html
@@ -73,7 +73,7 @@ var checkAnswer = function (length) {
         <p> Hightlight the pivot element for Quicksort in the array
           displayed below.The left pointer is at index 0 and the right
           pointer is at index <var>arr_size - 1</var>
-          <div id="jsav"></div>
+          <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">[selIndex !== -1]</div>
