--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -18,10 +18,6 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <style>
     #container {
       border: 0;
-      width: 780px;
-      height: 800px;
-      padding: 10px;
-      overflow: hidden;
     }
 
     .jsavarray { position: absolute; }
@@ -186,6 +182,9 @@ function checkAnswer(arr_size) {
       <div class="hints">
 	<p>Just take each record on the left one at a time and move it
 	to the proper bin on the right.</p>
+	<p> These are logically 3-digit numbers. If the value happens
+          to be less than 100, then you should think of the
+          missing digits as being 0.</p>
 	<p>Be sure that you are looking at the correct digit that the
 	question asks for.</p>
       </div>
