--- a/lib/RegisterBook.html
+++ b/lib/RegisterBook.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="_static/config.js"></script>
     <script type="text/javascript" src="../../../lib/odsaUtils-min.js"></script>
     <script type="text/javascript" src="../../../lib/odsaMOD-min.js"></script>
-    <script type="text/javascript" src="../../../lib/registerbook.js"></script>
+    <script type="text/javascript" src="../../../lib/registerbook-min.js"></script>
         
 <a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="Gradebook.html"></a>
 <a id="login-link" style="float:right;color:red;margin:10px 10px auto" class="login-link" href="#">Login</a>
